--- a/dashboard/views/dashboard.html
+++ b/dashboard/views/dashboard.html
@@ -831,7 +831,7 @@
 				buzzerTempON: function(event){
 					const id = event.target.id;
 					
-					const actuator = "buzzer";
+					const actuator = "temp_buzzer";
 					const dataType = "temperature";
 					const operation = "ON"; 
 					
@@ -854,7 +854,7 @@
 				buzzerTempOFF: function(event){
 					const id = event.target.id;
 					
-					const actuator = "buzzer";
+					const actuator = "temp_buzzer";
 					const dataType = "temperature";
 					const operation = "OFF"; 
 					
@@ -877,7 +877,7 @@
 				buzzerGasSmokeON: function(event){
 					const id = event.target.id;
 					
-					const actuator = "buzzer";
+					const actuator = "gas_smoke_buzzer";
 					const dataType = "gas_smoke";
 					const operation = "ON"; 
 					
@@ -900,7 +900,7 @@
 				buzzerGasSmokeOFF: function(event){
 					const id = event.target.id;
 					
-					const actuator = "buzzer";
+					const actuator = "gas_smoke_buzzer";
 					const dataType = "gas_smoke";
 					const operation = "OFF"; 
 					
